// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils/astHandler should astHandler works ok 1`] = `
"const arr: number[] = [
      1,
      2
    ];
const obj = {
      ...{a: 1, b: 2}
    };
const reducers: Reducer[] = [
      state => ({ ...state })
    ];
export const newVar = 200;
"
`;

exports[`utils/astHandler should astHandler works ok 2`] = `
"import testModule2, { a, default as B } from 'testModule2';
"
`;

exports[`utils/astHandler should handleImport works ok 1`] = `
"import { a, default as B } from 'testModule';
import testModule2, { default as C } from 'testModule2';"
`;

exports[`utils/astHandler should handleVars works ok 1`] = `
"const arr: number[] = [
      1,
      2
    ];
const obj = {
      ...{a: 1, b: 2}
    };
const reducers: Reducer[] = [
      state => ({ ...state })
    ];
export const newVar = 200;"
`;
